<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hungry Wallet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="enterusername">USERNAME</string>
    <string name="enterpassword">PASSWORD</string>
    <string name="enterpasswordagain">CONFIRM PASSWORD</string>
    <string name="enteremail">EMAIL</string>
    <string name="resetpwd">Forgot Password?</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">USERNAME</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="prompt_password_again">PASSWORD AGAIN</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_blank_email">enter an email address</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="title_activity_sign_up_or_log_in">SignUpOrLogInActivity</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="taste">taste.</string>
    <string name="slogan">Welcome to HungryWallet</string>
    <string name="title_activity_settings">Settings</string>
    <string name="feet_250">250 feet</string>
    <string name="feet_1000">1000 feet</string>
    <string name="feet_4000">4000 feet</string>
    <string name="search_distance">Search Distance</string>
    <string name="log_out">Log out of Anywall</string>
    <string name="post">Post</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>

    <!-- RECORD STRINGS -->
    <string name="billTitle">My Bills</string>
    <string name="error_blank_restaurant">enter a Restaurant</string>
    <string name="error_blank_amount">enter a bill amount</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="error_negative_bill">enter a positive bill amount</string>
    
    
    <!--  SEARCH STRINGS -->
    <string name="search_lcase">search</string>
    <string name="edit_foodsearch">E.G. PIZZA, SUSHI</string>
    <string name="button_send">find a restaurant</string>
    <string name="button_search_price">find by price</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="title_activity_display_search_results">DisplaySearchResultsActivity</string>
    <string name="going_out_to_eat">Going out to eat?</string>
    <string name="spoon_fork_image">A cute image of a spoon, plate, and fork.</string>
    <string name="noodles_image">A cute image of a bowl of noodles and chopsticks.</string>
    
    <!-- BUDGET STRINGS -->
    <string name="error_negative_budget">enter a positive budget value</string>

</resources>
