<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:background="#f7f3eb" >
    
    

    <!-- Row 1 with single column -->

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_span="2"
            android:textSize ="20sp"
            android:background="@drawable/banner"
            android:gravity="center"
            android:text = "@string/search_lcase"
            android:textColor ="#ffffff"
            android:textStyle = "bold"/>

    </TableRow>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:textColor="#000000" >
        
        <ImageView
            android:id="@+id/search_yelp_logo"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/yelp_logo_100x50" />
        
        <ImageView 
            android:id="@+id/search_circle"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom = "5dp"
            android:src = "@drawable/plate"
            android:layout_gravity = "center"
            android:contentDescription="@string/noodles_image"/>

		<TextView 
        android:id="@+id/searchbypref_term"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:layout_gravity="center"
        android:padding = "10dp"
        android:textSize = "16sp" />
       
      <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize = "12sp"
        android:layout_marginTop="10dp" >
        </ListView>
          
    </LinearLayout>
    
    

</TableLayout>

 <!-- <TabHost android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/tabHost"> -->
    <!-- The tab widget -->
   <!-- <TabWidget
        android:id="@android:id/tabs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_below="@+id/ListView1" /> -->

    <!-- <FrameLayout
        android:id="@android:id/tabcontent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" > -->
    
            <!-- Record Tab /Tab1 -->
		    <!-- <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/tab1"
		    android:orientation="vertical"
		    android:paddingTop="60dp" >  
		    </LinearLayout> --> 
	        <!-- Analysis Tab /Tab2 -->
		    <!-- <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:id="@+id/tab2"
		    android:orientation="vertical"
		    android:paddingTop="60dp" > 
	        </LinearLayout> -->
	        <!-- Search Tab /Tab3 -->
		    <!-- <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:id="@+id/tab3
		    android:orientation="vertical"
		    android:paddingTop="60dp" >
		    </LinearLayout>
	    
     </FrameLayout>
    
</TabHost>-->
</RelativeLayout>
